Add Docker installation

--- a/content/docs/index.mdx
+++ b/content/docs/index.mdx
@@ -1,9 +1,9 @@
-import { SiDocker } from "@icons-pack/react-simple-icons"
-
 ---
 title: Quecto
 description: A simple selfhostable link shortener 
 ---
+
+import { SiDocker, SiBun } from "@icons-pack/react-simple-icons"
 
 Quecto is a simple link shortener. It is written in TypeScript, and use Bun for performance. Currently, it uses SQLite as its database, but in the future it could potentially support MySQL and PostgreSQL.
 
@@ -12,6 +12,6 @@ Quecto is a simple link shortener. It is written in TypeScript, and use Bun for 
 
 
 <Cards>
-    <Card title="Standalone" href="/installation/standalone" icon={<SiDocker />} /> 
-    <Card title="Docker" href="/installation/docker" /> 
+    <Card title="Standalone" href="/installation/standalone" icon={<SiBun color="#FEF0DF" />} />
+    <Card title="Docker" href="/installation/docker" icon={<SiDocker color="#2496ED" />} />
 </Cards>
