Add standalone installation instruction

--- a/content/docs/index.mdx
+++ b/content/docs/index.mdx
@@ -8,10 +8,8 @@ import { SiDocker, SiBun } from "@icons-pack/react-simple-icons"
 Quecto is a simple link shortener. It is written in TypeScript, and use Bun for performance. Currently, it uses SQLite as its database, but in the future it could potentially support MySQL and PostgreSQL.
 
 # Installation
-## Requirements
-
 
 <Cards>
-    <Card title="Standalone" href="/installation/standalone" icon={<SiBun color="#FEF0DF" />} />
-    <Card title="Docker" href="/installation/docker" icon={<SiDocker color="#2496ED" />} />
+    <Card title="Standalone" href="docs/installation/standalone" icon={<SiBun color="#FEF0DF" />} target="_self" />
+    <Card title="Docker" href="docs/installation/docker" icon={<SiDocker color="#2496ED" />} target="_self" />
 </Cards>
