--- a/content/docs/installation/standalone.mdx
+++ b/content/docs/installation/standalone.mdx
@@ -5,16 +5,16 @@ description: "Host Quecto with bun runtime"
 import { SiBun } from "@icons-pack/react-simple-icons";
 import { Step, Steps } from 'fumadocs-ui/components/steps';
 
-# Requirements
+## Requirements
 <Cards>
     <Card title="Bun" icon={<SiBun color="#FEF0DF" />} className="card-vertical" />
 </Cards>
 
-# Installation
+## Installation
 
 <Steps>
     <Step>
-        ## Clone the repository
+        ### Clone the repository
         Execute the following command to clone the repository.
         ```bash
         git clone https://github.com/oriionn/quecto.git
@@ -22,7 +22,7 @@ import { Step, Steps } from 'fumadocs-ui/components/steps';
     </Step>
 
     <Step>
-        ## Install dependencies
+        ### Install dependencies
         Execute following commands to install the dependencies.
         ```bash
         cd quecto
@@ -31,7 +31,7 @@ import { Step, Steps } from 'fumadocs-ui/components/steps';
     </Step>
 
     <Step>
-        ## Build the project
+        ### Build the project
         Execute the following command to build the project.
         ```bash
         bun run build
@@ -39,7 +39,7 @@ import { Step, Steps } from 'fumadocs-ui/components/steps';
     </Step>
 
     <Step>
-        ## Run the project
+        ### Run the project
         Execute the following command to run the project.
         ```bash
         bun start
