Add some remark plugins

--- a/content/docs/index.mdx
+++ b/content/docs/index.mdx
@@ -7,7 +7,7 @@ import { SiDocker, SiBun } from "@icons-pack/react-simple-icons"
 
 Quecto is a simple link shortener. It is written in TypeScript, and use Bun for performance. Currently, it uses SQLite as its database, but in the future it could potentially support MySQL and PostgreSQL.
 
-## Installation
+## Installation [#installation]
 
 <Cards>
     <Card title="Standalone" href="docs/installation/standalone" icon={<SiBun color="#FEF0DF" />} target="_self" />
