--- a/content/docs/installation/docker.mdx
+++ b/content/docs/installation/docker.mdx
@@ -18,7 +18,7 @@ import { Step, Steps } from 'fumadocs-ui/components/steps';
     </Step>
 
     <Step>
-        ### Initialize database and config
+        ### Initialize database and config [#cli-init]
         Execute the following command to generate the database and configuration files.
         ```bash
         docker exec quecto bun generate:config && bun generate:db
@@ -26,18 +26,18 @@ import { Step, Steps } from 'fumadocs-ui/components/steps';
     </Step>
 
     <Step>
-        ### Configuration
+        ### Configuration [#cli-config]
         Edit the `config.yml` file in the `data` directory.
     </Step>
 </Steps>
 
 
 
-## Docker Compose
+## Docker Compose [#compose]
 
 <Steps>
     <Step>
-        ### Create a `docker-compose.yml` file
+        ### Create a `docker-compose.yml` file [#compose-yml]
         Create a `docker-compose.yml` file, but replace `port` and `/path/to/quecto` with your desired port and path.
         ```yaml title="docker-compose.yml"
         version: "3"
@@ -53,7 +53,7 @@ import { Step, Steps } from 'fumadocs-ui/components/steps';
     </Step>
 
     <Step>
-        ### Run with Docker Compose
+        ### Run with Docker Compose [#compose-run]
         Execute the following command to run Quecto with Docker Compose.
         ```bash
         docker-compose up -d
@@ -61,7 +61,7 @@ import { Step, Steps } from 'fumadocs-ui/components/steps';
     </Step>
 
     <Step>
-        ### Initialize database and config
+        ### Initialize database and config [#compose-init]
         Execute the following command to generate the database and configuration files.
         ```bash
         docker exec quecto bun generate:config && bun generate:db
@@ -69,7 +69,7 @@ import { Step, Steps } from 'fumadocs-ui/components/steps';
     </Step>
 
     <Step>
-        ### Configuration
+        ### Configuration [#compose-config]
         Edit the `config.yml` file in the `data` directory.
     </Step>
 
