--- a/content/docs/installation/docker.mdx
+++ b/content/docs/installation/docker.mdx
@@ -28,6 +28,8 @@ import { Step, Steps } from 'fumadocs-ui/components/steps';
     <Step>
         ### Configuration [#cli-config]
         Edit the `config.yml` file in the `data` directory.
+
+        For more information, see the [Configuration](docs/config) page.
     </Step>
 </Steps>
 
@@ -71,6 +73,9 @@ import { Step, Steps } from 'fumadocs-ui/components/steps';
     <Step>
         ### Configuration [#compose-config]
         Edit the `config.yml` file in the `data` directory.
+
+        For more information, see the [Configuration](docs/config) page.
     </Step>
 
 </Steps>
+
