Update some api specifications

--- a/content/docs/config.mdx
+++ b/content/docs/config.mdx
@@ -42,7 +42,7 @@ The `name` field is the name of the expiration time.
 The `minutes` field is the number of minutes before the short link expires.
 If you want to put a unlimited expiration time, you can put `0` in the field.
 
-```yaml title="config.yml"
+```yaml twoslash title="config.yml"
 expirations:
     - name: "Unlimited"
       minutes: 0
