Edit home page and add table of contents

--- a/content/docs/api/index.mdx
+++ b/content/docs/api/index.mdx
@@ -1,5 +1,15 @@
 ---
 title: "Introduction"
 description: "API documentation for Quecto"
-index: false
 ---
+
+To interact with Quecto, you need to use the API. The API is a RESTful API that allows you to shorten links, unshorten links, and manage your shortened links.
+
+## Table of contents
+<Cards>
+    <Card title="Shorten a URL" href="docs/api/shorten-link" />
+    <Card title="Unshorten a URL" href="docs/api/get-original-link" />
+    <Card title="Delete a shortened URL" href="docs/api/delete-shortened-link" />
+    <Card title="Check if a shortened link need a password" href="docs/api/check-password" />
+    <Card title="Get the config of Quecto Instance" href="docs/api/get-config" />
+</Cards>
