--- a/content/docs/index.mdx
+++ b/content/docs/index.mdx
@@ -25,3 +25,8 @@ The `config.yml` file is the configuration file of Quecto. It contains the follo
 
 For more information, see the [Configuration](docs/config) page.
 
+## API Documentation [#api]
+
+To interact with Quecto, you need to use the API. The API is a RESTful API that allows you to shorten links, unshorten links, and manage your shortened links.
+
+For more information, see the [API Documentation](docs/api).
