--- a/content/docs/installation/docker.mdx
+++ b/content/docs/installation/docker.mdx
@@ -27,7 +27,7 @@ import { Step, Steps } from 'fumadocs-ui/components/steps';
 
     <Step>
         ### Configuration [#cli-config]
-        Edit the `config.yml` file in the `data` directory.
+        Edit the `config.yml` file in the config directory.
 
         For more information, see the [Configuration](docs/config) page.
     </Step>
@@ -73,7 +73,7 @@ import { Step, Steps } from 'fumadocs-ui/components/steps';
 
     <Step>
         ### Configuration [#compose-config]
-        Edit the `config.yml` file in the `data` directory.
+        Edit the `config.yml` file in the config directory.
 
         For more information, see the [Configuration](docs/config) page.
     </Step>
