--- a/content/docs/api/index.fr.mdx
+++ b/content/docs/api/index.fr.mdx
@@ -1,11 +1,12 @@
 ---
 title: "Introduction"
-description: "API documentation for Quecto"
+description: "Documentation de l'API pour Quecto"
 ---
 
-To interact with Quecto, you need to use the API. The API is a RESTful API that allows you to shorten links, unshorten links, and manage your shortened links.
+Pour intéragir avec une instance Quecto à travers autre chose que l'interface Web, vous devez utiliser l'API.
+Cette API vous permet de raccourcir des liens, récupérer l'original de ces liens, et de gérer vos liens raccourcis.
 
-## Table of contents
+## Sommaire
 <Cards>
     <Card title="Shorten a URL" href="api/shorten-link" />
     <Card title="Unshorten a URL" href="api/get-original-link" />
